--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-apexcharts": "^1.4.0",
     "react-autocomplete": "^1.8.1",
     "react-autosuggest": "^10.1.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^1.0.1",
     "react-bootstrap-icons": "^1.10.3",
     "react-checkbox-tree": "^1.8.0",
@@ -105,6 +106,7 @@
     "@types/jqueryui": "^1.12.16",
     "@types/material-ui": "^0.21.12",
     "@types/react": "17.0.45",
+    "@types/react-beautiful-dnd": "^13.1.7",
     "@types/react-big-calendar": "^1.6.3",
     "@types/react-csv": "^1.1.3",
     "@types/react-datepicker": "^4.8.0",
