--- a/config/config.json
+++ b/config/config.json
@@ -294,6 +294,14 @@
       ]
 
     },
+    "site-structure-web-part": {
+      "components": [
+        {
+          "entrypoint": "./lib/webparts/siteStructure/SiteStructureWebPart.js",
+          "manifest": "./src/webparts/siteStructure/SiteStructureWebPart.manifest.json"
+        }
+      ]
+    },
     "site-data-backup-tool-web-part": {
       "components": [
         {
@@ -356,6 +364,7 @@
     "ComponentCommentsWebPartStrings": "lib/webparts/componentComments/loc/{locale}.js",
     "FeedbackWebPartStrings": "lib/webparts/TimeReport/loc/{locale}.js",
     "TaskStepsWebPartStrings": "lib/webparts/taskSteps/loc/{locale}.js",
+    "SiteStructureWebPartStrings": "lib/webparts/siteStructure/loc/{locale}.js",
     "SiteDataBackupToolWebPartStrings": "lib/webparts/siteDataBackupTool/loc/{locale}.js",
     "SmartmetadataportfolioWebPartStrings": "lib/webparts/smartmetadataportfolio/loc/{locale}.js",
     "ParentPortfolioViewWebPartStrings": "lib/webparts/parentPortfolioView/loc/{locale}.js",
