--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@pnp/spfx-controls-react": "3.12.0",
     "@tanstack/match-sorter-utils": "^8.8.4",
     "@tanstack/react-table": "^8.8.4",
-    "@tanstack/react-virtual": "^3.0.0-beta.68",
+    "@tanstack/react-virtual": "^3.0.1",
     "@types/jquery": "^3.5.14",
     "@types/moment": "^2.13.0",
     "@types/react-loader": "^2.4.5",
