--- a/src/webparts/hRcontractProfile/HRcontractProfileWebPart.manifest.json
+++ b/src/webparts/hRcontractProfile/HRcontractProfileWebPart.manifest.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://developer.microsoft.com/json-schemas/spfx/client-side-web-part-manifest.schema.json",
-  "id": "eaf1a639-2ef6-4779-a740-c4fe7b92360e",
-  "alias": "HRcontractProfileWebPart",
+  "id": "37771e54-7a9f-4148-8099-17c77c42a659",
+  "alias": "HrContractProfileWebPart",
   "componentType": "WebPart",
 
   // The "*" signifies that the version should be taken from the package.json
@@ -18,11 +18,11 @@
   "preconfiguredEntries": [{
     "groupId": "5c03119e-3074-46fd-976b-c60198311f70", // Advanced
     "group": { "default": "Advanced" },
-    "title": { "default": "HRcontractProfile" },
-    "description": { "default": "HRcontractProfile description" },
+    "title": { "default": "HrContractProfile" },
+    "description": { "default": "HrContractProfile description" },
     "officeFabricIconFontName": "Page",
     "properties": {
-      "description": "HRcontractProfile"
+      "description": "HrContractProfile"
     }
   }]
 }
