--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "react-checkbox-tree": "^1.8.0",
     "react-csv": "^2.2.2",
     "react-datepicker": "^4.8.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "17.0.1",
     "react-draft-wysiwyg": "^1.15.0",
     "react-fontawesome": "^1.7.1",
