--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
     "gulp-postcss": "^9.0.1",
+    "html2pdf.js": "^0.10.1",
     "immutable": "^4.1.0",
     "jquery": "^3.6.3",
     "jspdf": "^2.5.1",
