--- a/package.json
+++ b/package.json
@@ -82,11 +82,13 @@
     "react-moment": "^1.1.2",
     "react-popper-tooltip": "^4.4.2",
     "react-quill": "^2.0.0",
+    "react-slick": "^0.30.1",
     "react-table": "^7.0.4",
     "react-to-print": "^2.14.10",
     "reactjs-popup": "^2.0.5",
     "reactstrap": "^8.10.1",
     "setimmediate": "^1.0.5",
+    "slick-carousel": "^1.8.1",
     "sp-pnp-js": "^3.0.10",
     "tslib": "2.3.1",
     "turnstone-recent-searches": "^0.5.0",
@@ -115,6 +117,7 @@
     "@types/react-draft-wysiwyg": "^1.13.4",
     "@types/react-loader": "^2.4.5",
     "@types/react-mentions": "^4.1.8",
+    "@types/react-slick": "^0.23.13",
     "@types/react-table": "^7.7.14",
     "@types/setimmediate": "^1.0.2",
     "@types/uuid": "^9.0.1",
