--- a/config/config.json
+++ b/config/config.json
@@ -410,6 +410,14 @@
           "manifest": "./src/webparts/datacleanuptool/DatacleanuptoolWebPart.manifest.json"
         }
       ]
+    },
+    "flow-creation-web-part": {
+      "components": [
+        {
+          "entrypoint": "./lib/webparts/flowCreation/FlowCreationWebPart.js",
+          "manifest": "./src/webparts/flowCreation/FlowCreationWebPart.manifest.json"
+        }
+      ]
     }
   },
   "externals": {
@@ -443,6 +451,7 @@
     "ComponentCommentsWebPartStrings": "lib/webparts/componentComments/loc/{locale}.js",
     "DatacleanuptoolWebPartStrings": "lib/webparts/datacleanuptool/loc/{locale}.js",
     "FeedbackWebPartStrings": "lib/webparts/TimeReport/loc/{locale}.js",
+    "FlowCreationWebPartStrings": "lib/webparts/flowCreation/loc/{locale}.js",
     "TaskStepsWebPartStrings": "lib/webparts/taskSteps/loc/{locale}.js",
     "TaskUserManagementWebPartStrings": "lib/webparts/taskUserManagement/loc/{locale}.js",
     "SiteStructureWebPartStrings": "lib/webparts/SiteStructure/loc/{locale}.js",
