--- a/config/config.json
+++ b/config/config.json
@@ -410,6 +410,14 @@
           "manifest": "./src/webparts/datacleanuptool/DatacleanuptoolWebPart.manifest.json"
         }
       ]
+    },
+    "flow-creation-web-part": {
+      "components": [
+        {
+          "entrypoint": "./lib/webparts/flowCreation/FlowCreationWebPart.js",
+          "manifest": "./src/webparts/flowCreation/FlowCreationWebPart.manifest.json"
+        }
+      ]
     }
   },
   "externals": {
@@ -481,6 +489,7 @@
     "LastModifiedViewsWebPartStrings": "lib/webparts/lastModifiedViews/loc/{locale}.js",
     "HrContractProfileWebPartStrings": "lib/webparts/hrContractProfile/loc/{locale}.js",
     "ManagedashboardconfigWebPartStrings": "lib/webparts/managedashboardconfig/loc/{locale}.js",
+    "FlowCreationWebPartStrings": "lib/webparts/flowCreation/loc/{locale}.js",
     "SMarttaskWebPartStrings": "lib/webparts/sMarttask/loc/{locale}.js",
     "GroupByComponentsDashboardWebPartStrings": "lib/webparts/groupByComponentsDashboard/loc/{locale}.js"
   }
