--- a/config/config.json
+++ b/config/config.json
@@ -10,6 +10,14 @@
         }
       ]
     },
+    "gmbh-calendar-web-part": {
+      "components": [
+        {
+          "entrypoint": "./lib/webparts/gmbhCalendar/GmbhCalendarWebPart.js",
+          "manifest": "./src/webparts/gmbhCalendar/GmbhCalendarWebPart.manifest.json"
+        }
+      ]
+    },
     "smart-connect-web-part": {
       "components": [
         {
@@ -481,6 +489,8 @@
     "LastModifiedViewsWebPartStrings": "lib/webparts/lastModifiedViews/loc/{locale}.js",
     "HrContractProfileWebPartStrings": "lib/webparts/hrContractProfile/loc/{locale}.js",
     "ManagedashboardconfigWebPartStrings": "lib/webparts/managedashboardconfig/loc/{locale}.js",
+    
+    "GmbhCalendarWebPartStrings": "lib/webparts/gmbhCalendar/loc/{locale}.js",
     "SMarttaskWebPartStrings": "lib/webparts/sMarttask/loc/{locale}.js",
     "GroupByComponentsDashboardWebPartStrings": "lib/webparts/groupByComponentsDashboard/loc/{locale}.js"
   }
