--- a/package.json
+++ b/package.json
@@ -92,7 +92,8 @@
     "sp-pnp-js": "^3.0.10",
     "tslib": "2.3.1",
     "turnstone-recent-searches": "^0.5.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@microsoft/eslint-config-spfx": "1.15.2",
