--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.10.5",
-    "@fluentui/react": "^8.103.7",
+    "@fluentui/react": "^8.106.4",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@kenjiuno/msgreader": "^1.20.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "@microsoft/sp-core-library": "1.16.1",
+    "@microsoft/sp-core-library": "1.18.2",
     "@microsoft/sp-loader": "^1.16.1",
-    "@microsoft/sp-lodash-subset": "1.16.1",
-    "@microsoft/sp-office-ui-fabric-core": "1.16.1",
-    "@microsoft/sp-property-pane": "1.16.1",
-    "@microsoft/sp-webpart-base": "1.16.1",
+    "@microsoft/sp-lodash-subset": "1.18.2",
+    "@microsoft/sp-office-ui-fabric-core": "1.18.2",
+    "@microsoft/sp-property-pane": "1.18.2",
+    "@microsoft/sp-webpart-base": "1.18.2",
     "@mui/material": "^5.11.7",
     "@pnp/common": "^2.11.0",
     "@pnp/graph": "^3.10.0",
@@ -95,7 +95,8 @@
     "tslib": "2.3.1",
     "turnstone-recent-searches": "^0.5.0",
     "xlsx": "^0.18.5",
-    "xml2js": "^0.6.2"
+    "xml2js": "^0.6.2",
+    "@microsoft/sp-component-base": "1.18.2"
   },
   "devDependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
@@ -107,7 +108,7 @@
     "@microsoft/rush-stack-compiler-3.9": "^0.5.0",
     "@microsoft/rush-stack-compiler-4.5": "0.2.2",
     "@microsoft/sp-build-web": "^1.16.1",
-    "@microsoft/sp-module-interfaces": "1.16.1",
+    "@microsoft/sp-module-interfaces": "1.18.2",
     "@microsoft/sp-tslint-rules": "1.14.0",
     "@rushstack/eslint-config": "2.5.1",
     "@types/bootstrap": "^5.2.6",
