create all structure

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "html-to-image": "^1.11.11",
     "html2pdf.js": "^0.10.1",
     "immutable": "^4.1.0",
+    "jodit-react": "^4.0.15",
     "jquery": "^3.6.3",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.29",
