--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@microsoft/sp-office-ui-fabric-core": "1.16.1",
     "@microsoft/sp-property-pane": "1.16.1",
     "@microsoft/sp-webpart-base": "1.16.1",
+    "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.11.7",
     "@pnp/common": "^2.11.0",
     "@pnp/graph": "^3.10.0",
