--- a/config/config.json
+++ b/config/config.json
@@ -458,6 +458,22 @@
           "manifest": "./src/webparts/contactProfile/ContactProfileWebPart.manifest.json"
         }
       ]
+    },
+    "profiles-web-part": {
+      "components": [
+        {
+          "entrypoint": "./lib/webparts/profiles/ProfilesWebPart.js",
+          "manifest": "./src/webparts/profiles/ProfilesWebPart.manifest.json"
+        }
+      ]
+    },
+    "smartpages-web-part": {
+      "components": [
+        {
+          "entrypoint": "./lib/webparts/smartpages/SmartpagesWebPart.js",
+          "manifest": "./src/webparts/smartpages/SmartpagesWebPart.manifest.json"
+        }
+      ]
     }
   },
   "externals": {
@@ -538,6 +554,8 @@
     "TaskProfileTemplateWebPartStrings": "lib/webparts/taskProfileTemplate/loc/{locale}.js",
     "EmployeeDashboardTemplatedWebPartStrings": "lib/webparts/employeeDashboardTemplated/loc/{locale}.js",
     "ContactDatabaseWebPartStrings": "lib/webparts/contactDatabase/loc/{locale}.js",
-    "ContactProfileWebPartStrings": "lib/webparts/contactProfile/loc/{locale}.js"
+    "ContactProfileWebPartStrings": "lib/webparts/contactProfile/loc/{locale}.js",
+    "SmartpagesWebPartStrings": "lib/webparts/smartpages/loc/{locale}.js",
+    "ProfilesWebPartStrings": "lib/webparts/profiles/loc/{locale}.js"
   }
 }
