--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "@microsoft/sp-tslint-rules": "1.14.0",
     "@rushstack/eslint-config": "2.5.1",
     "@types/bootstrap": "^5.2.6",
+    "@types/core-js": "^2.5.8",
     "@types/draftjs-to-html": "^0.8.1",
     "@types/file-saver": "^2.0.5",
     "@types/jqueryui": "^1.12.16",
