--- a/src/webparts/hhhhSmartMetadataPortfolio/HhhhSmartMetadataPortfolioWebPart.manifest.json
+++ b/src/webparts/hhhhSmartMetadataPortfolio/HhhhSmartMetadataPortfolioWebPart.manifest.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://developer.microsoft.com/json-schemas/spfx/client-side-web-part-manifest.schema.json",
-  "id": "d2e5bff2-a137-4fe8-bac4-60509d189962",
-  "alias": "ProfilesWebPart",
+  "id": "3ab10469-604e-4f32-8a9c-3c09447f9923",
+  "alias": "HhhhSmartMetadataPortfolioWebPart",
   "componentType": "WebPart",
 
   // The "*" signifies that the version should be taken from the package.json
@@ -18,11 +18,11 @@
   "preconfiguredEntries": [{
     "groupId": "5c03119e-3074-46fd-976b-c60198311f70", // Advanced
     "group": { "default": "Advanced" },
-    "title": { "default": "Profiles" },
-    "description": { "default": "Profiles description" },
+    "title": { "default": "HHHHSmartMetadataPortfolio" },
+    "description": { "default": "HHHHSmartMetadataPortfolio description" },
     "officeFabricIconFontName": "Page",
     "properties": {
-      "description": "Profiles"
+      "description": "HHHHSmartMetadataPortfolio"
     }
   }]
 }
