--- a/src/webparts/hhhhSmartPages/HhhhSmartPagesWebPart.manifest.json
+++ b/src/webparts/hhhhSmartPages/HhhhSmartPagesWebPart.manifest.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://developer.microsoft.com/json-schemas/spfx/client-side-web-part-manifest.schema.json",
-  "id": "13e3a578-7e70-4313-a095-a0dcbefb5963",
-  "alias": "SmartpagesWebPart",
+  "id": "1857057b-e8d3-4397-94bd-6dc6baa97880",
+  "alias": "HhhhSmartPagesWebPart",
   "componentType": "WebPart",
 
   // The "*" signifies that the version should be taken from the package.json
@@ -18,11 +18,11 @@
   "preconfiguredEntries": [{
     "groupId": "5c03119e-3074-46fd-976b-c60198311f70", // Advanced
     "group": { "default": "Advanced" },
-    "title": { "default": "smartpages" },
-    "description": { "default": "smartpages description" },
+    "title": { "default": "HHHHSmartPages" },
+    "description": { "default": "HHHHSmartPages description" },
     "officeFabricIconFontName": "Page",
     "properties": {
-      "description": "smartpages"
+      "description": "HHHHSmartPages"
     }
   }]
 }
