--- a/src/webparts/hhhcontact/HhhcontactWebPart.manifest.json
+++ b/src/webparts/hhhcontact/HhhcontactWebPart.manifest.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://developer.microsoft.com/json-schemas/spfx/client-side-web-part-manifest.schema.json",
-  "id": "29469bc0-91b4-4315-a763-44c6027b23d8",
-  "alias": "ContactDatabaseWebPart",
+  "id": "a103ec3b-3e8a-42b9-a9b3-5e399767a111",
+  "alias": "HhhcontactWebPart",
   "componentType": "WebPart",
 
   // The "*" signifies that the version should be taken from the package.json
@@ -18,11 +18,11 @@
   "preconfiguredEntries": [{
     "groupId": "5c03119e-3074-46fd-976b-c60198311f70", // Advanced
     "group": { "default": "Advanced" },
-    "title": { "default": "Contact Database" },
-    "description": { "default": "Contact Database description" },
+    "title": { "default": "hhhcontact" },
+    "description": { "default": "hhhcontact description" },
     "officeFabricIconFontName": "Page",
     "properties": {
-      "description": "Contact Database"
+      "description": "hhhcontact"
     }
   }]
 }
