--- a/src/webparts/lastModified/LastModifiedWebPart.manifest.json
+++ b/src/webparts/lastModified/LastModifiedWebPart.manifest.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://developer.microsoft.com/json-schemas/spfx/client-side-web-part-manifest.schema.json",
-  "id": "a753becb-7abc-42f9-99bc-3bab8ffef6b8",
-  "alias": "LastModidiedItemsWebPart",
+  "id": "1858119e-92bf-4aca-8c39-f96869b09a60",
+  "alias": "LastModifiedWebPart",
   "componentType": "WebPart",
 
   // The "*" signifies that the version should be taken from the package.json
@@ -18,11 +18,11 @@
   "preconfiguredEntries": [{
     "groupId": "5c03119e-3074-46fd-976b-c60198311f70", // Advanced
     "group": { "default": "Advanced" },
-    "title": { "default": "LastModidiedItems" },
-    "description": { "default": "LastModidiedItems description" },
+    "title": { "default": "last-modified" },
+    "description": { "default": "last-modified description" },
     "officeFabricIconFontName": "Page",
     "properties": {
-      "description": "LastModidiedItems"
+      "description": "last-modified"
     }
   }]
 }
